# rv32i-sim

./: Cargo.toml  README.md  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/: alu.rs  cpu.rs  elf_helper.rs  error.rs  flags.rs  lib.rs  loader.rs  run_wrapper.rs  sim.rs  single_cycle.rs  stages_simple.rs  system_call.rs
src/eval/: cpi.rs  multi.rs  single.rs
src/instruction/: decode_helper.rs  mod.rs
src/memory/: cache.rs  exclusive.rs  inclusive.rs  mmu.rs  mod.rs
src/pipelined/: branch_predictor.rs  mod.rs  pipeline.rs  stages.rs
test-riscv/: ackermann.riscv  helloworld.riscv  matrixmulti.riscv  quicksort.riscv  test_arithmetic.riscv  test_branch.riscv  test_syscall.riscv
