[package]
name = "rv32i-pipeline-sim"
version = "0.1.0"
edition = "2021"
default-run = "sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sim_lib"
path = "src/lib.rs"

[[bin]]
name = "sim"
path = "src/sim.rs"

[[bin]]
name = "single-eval"
path = "src/eval/single.rs"

[[bin]]
name = "multi-eval"
path = "src/eval/multi.rs"

[[bin]]
name = "sim-eval"
path = "src/eval/cpi.rs"

[dependencies]
object = "0.35.0"
text_io = "0.1.12"
plotters = "0.3.3"
csv = "1.3.0"
