[package]
name = "rv32i-pipeline-sim"
version = "0.1.0"
edition = "2021"
default-run = "sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sim_lib"
path = "src/lib.rs"

[[bin]]
name = "sim"
path = "src/sim.rs"

[dependencies]
object = "0.36.7"
text_io = "0.1.13"
thiserror = "2.0.12"
xflags = "0.3.2"
